--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,6 +1,7 @@
 <main id="main" class="container mt-5">
     <div class="row d-flex d-flex justify-content-between">
         {{#each carts}}
+        <pre>{{this}}</pre>
         <div class="card col-3 m-2 border border-4">
             <div class="card-body">
                 <h5 class="card-title text-center">{{title}}</h5>
