Visualizacion de Productos correcta

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -4,9 +4,9 @@
         <pre>{{this}}</pre>
         <div class="card col-3 m-2 border border-4">
             <div class="card-body">
-                <h5 class="card-title text-center">{{title}}</h5>
-                <h2 class="card-text text-center ">$ {{price}}</h2>
-                <h1>Cantidad: {{quantity}}</h1>
+                <h5 class="card-title text-center">{{priceTotal}}</h5>
+                <h2 class="card-text text-center ">$ {{products}}</h2>
+                <h1>Cantidad: {{quantityTotal}}</h1>
             </div>
         </div>
         {{/each}}
