--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,11 +2,10 @@
     <div class="row d-flex d-flex justify-content-between">
         {{#each products}}
         <div class="card col-3 m-2 border border-4">
-            <img src="{{thumbnail}}" class="img-fluid" alt="">
+            <img src="{{thumbnail}}" class="img-fluid">
             <div class="card-body">
                 <h5 class="card-title text-center">{{title}}</h5>
                 <p class="card-text text-center mb-0">{{description}}</p>
-                <p class="card-text text-center">cod: {{code}}</p>
                 <h2 class="card-text text-center ">$ {{price}}</h2>
                 <p class="card-text text-center ">Cantidad: {{stock}}</p>
                 <div class="d-flex justify-content-center">
@@ -14,21 +13,26 @@
                 </div>
             </div>
         </div>
-        <div id="paginacion">
+        {{/each}}
+        <div class="d-flex">
             {{#if hasPrevPage}}
-            <button >Anterior</button>
+            <button>Anterior</button>
             {{else}}
-            <button >Anterior</button>
+            <button id="prev">Anterior</button>
             {{/if}}
-            <p>2</p>
+            <p>{{page}}</p>
             {{#if hasNextPage}}
-            <button >Siguiente</button>
+            <button>Siguiente</button>
             {{else}}
-            <button >Siguiente</button>
+            <button id="next">Siguiente</button>
             {{/if}}
         </div>
-        {{/each}}
     </div>
 </main>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"></script>
+<script src="/src/public/index.js"></script>
