Login y Register OK

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,5 @@
-<main>
-  <section class="loginSection">
+<main id="loginMain">
+  <section id="loginSection">
     <div class="loginDiv">
       <h1 class="loginTitle">Login</h1>
       <form class="loginForm" id="formLogin">
