--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,16 +1,23 @@
-<h1>Register</h1>
-<form class="loginForm" id="formRegister">
-    <label>Nombre</label>
-    <input type="text" required id="firstName" placeholder="First name" />
-    <label>Apellido</label>
-    <input type="text" required id="lastName" placeholder="Last name" />
-    <label>Edad</label>
-    <input type="number" required id="age" placeholder="Age" />
-    <label>Correo electrónico</label>
-    <input type="email" required id="email" placeholder="email@gmail.com" />
-    <label>Contraseña</label>
-    <input type="password" required id="password" placeholder="********" />
-    <button type="submit" class="loginButton">Register</button>
-</form>
+<main id="registerMain">
+    <section id="registerSection">
+        <div id="registerDiv">
+            <h1 id="registerTitle">Crear usuario</h1>
+            <form class="loginForm" id="formRegister">
+                <label>Nombre</label>
+                <input type="text" required id="firstName" placeholder="Nombre" />
+                <label>Apellido</label>
+                <input type="text" required id="lastName" placeholder="Apellido" />
+                <label>Edad</label>
+                <input type="number" required id="age" placeholder="Edad" />
+                <label>Correo electrónico</label>
+                <input type="email" required id="email" placeholder="email@gmail.com" />
+                <label>Contraseña</label>
+                <input type="password" required id="password" placeholder="********" />
+                <button type="submit" class="loginButtonRegister">Enviar</button>
+            </form>
+        </div>
+    </section>
+</main>
+
 
 <script src="/js/register.js"></script>
