--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,3 +1,15 @@
+<header id="headerhome">
+    <div id="headerMenu">
+        <li><a href="/products">Tienda</a></li>
+        <li><a href="/profile">Perfil</a></li>
+        <li><a id="btnLogout" href="/logout">Logout</a></li>
+    </div>
+</header>
+<section>
+    <div>
+        <h1>Bienvenid@ {{user}}!</h1>
+    </div>
+</section>
 <main id="main" class="container mt-5">
     <div class="row d-flex d-flex justify-content-between">
         {{#each products}}
@@ -14,7 +26,7 @@
             </div>
         </div>
         {{/each}}
-        <div class="d-flex justify-content-center align-items-center">
+        <div id="paginacion">
             {{#if hasPrevPage}}
             <button id="prev">Anterior</button>
             {{else}}
@@ -27,12 +39,8 @@
             <button disabled id="next">Siguiente</button>
             {{/if}}
         </div>
-        {{!-- <div>
-            <a href="/products?page={{prevPage}}&&limit=">Prev</a>
-            <a href="/products?page={{nextPage}}">Next</a>
-        </div> --}}
         <div class="d-flex justify-content-center">
-            {{ page }} / {{ totalPages }}
+            {{ page }} /  {{ totalPages }}
         </div>
     </div>
 </main>
@@ -43,3 +51,4 @@
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
 <script src="/index.js"></script>
+<script src="/js/logout.js"></script>
