--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,2 +1,11 @@
-<h1>Profile {{name}}</h1>
-<button>Logout</button>
+<header id="headerhome">
+    <div id="headerMenu">
+        <li><a href="/products">Tienda</a></li>
+        <li><a href="/profile">Perfil</a></li>
+        <li><a id="btnLogout" href="/logout">Logout</a></li>
+    </div>
+</header>
+
+<h1>Profile{{user}}</h1>
+
+<script src="/js/logout.js"></script>
