--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -6,6 +6,9 @@
     </div>
 </header>
 
-<h1>Profile{{user}}</h1>
+<h1>Profile</h1>
+<p>Nombre: {{name}}</p>
+<p>Apellido:{{lastName}}</p>
+<p>Email: {{email}}</p>
 
 <script src="/js/logout.js"></script>
