--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,7 +7,7 @@
 </header>
 <section>
     <div>
-        <h1>Bienvenid@ {{user}}!</h1>
+        <h1>Bienvenid@ {{name}} {{lastName}}!</h1>
     </div>
 </section>
 <main id="main" class="container mt-5">
