--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -5,10 +5,15 @@
         <li><a id="btnLogout" href="/logout">Logout</a></li>
     </div>
 </header>
+<section id="perfil">
+    <div id="perfilDatos">
+        <h1>Perfil</h1>
+        <p>Nombre: {{name}}</p>
+        <p>Apellido:{{lastName}}</p>
+        <p>Edad: {{age}}</p>
+        <p>Email: {{email}}</p>
+    </div>
+</section>
 
-<h1>Profile</h1>
-<p>Nombre: {{name}}</p>
-<p>Apellido:{{lastName}}</p>
-<p>Email: {{email}}</p>
-
+<script src="/index.js"></script>
 <script src="/js/logout.js"></script>
