clase24 segunda practica integradora

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -8,9 +8,8 @@
 <section id="perfil">
     <div id="perfilDatos">
         <h1>Perfil</h1>
-        <p>Nombre: {{name}}</p>
-        <p>Apellido:{{lastName}}</p>
-        <p>Edad: {{age}}</p>
+        <p>Nombre y Apellido: {{name}} {{lastName}}</p>
+        <p>Edad: {{age}} años</p>
         <p>Email: {{email}}</p>
     </div>
 </section>
