3era preentrega falta carrito y tickets

--- a/src/views/forgot-password.handlebars
+++ b/src/views/forgot-password.handlebars
@@ -1,6 +1,6 @@
 <div>
     <form id="formulario">
-        <h1>Olvide mi contraseña</h1>
+        <h1>Actualiza tu contraseña</h1>
         <input id="email" type="email" placeholder="Ingresa tu email">
         <input id="password" type="password" placeholder="Ingresa tu nueva contraseña">
         <button type="submit">Cambiar contraseña</button>
