--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -10,6 +10,8 @@
         <button type="submit" class="loginButton">Login</button>
       </form>
       <a href="/register" style="margin: 20px 0; color: #aaaaaa;">Registrate aqui</a>
+      <br>
+      <a href="/forgot-password" style="margin: 20px 0; color: #aaaaaa;">Olvidé mi contraseña</a>
     </div>
   </section>
 </main>
