--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -11,7 +11,7 @@
         <p>Nombre y Apellido: {{name}} {{lastName}}</p>
         <p>Edad: {{age}} años</p>
         <p>Email: {{email}}</p>
-        <p>Rol: {{rol}}</p>
+        <p>Rol: {{role}}</p>
     </div>
 </section>
 
