--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -11,6 +11,7 @@
         <p>Nombre y Apellido: {{name}} {{lastName}}</p>
         <p>Edad: {{age}} años</p>
         <p>Email: {{email}}</p>
+        <p>Rol: {{role}}</p>
     </div>
 </section>
 
