--- a/src/views/forgot-password.handlebars
+++ b/src/views/forgot-password.handlebars
@@ -1,4 +1,26 @@
-<div>
+<link rel='stylesheet' href='/css/styles.css' />
+<header>
+  <div></div>
+  <h1>Recupera tu contraseña</h1>
+  <div></div>
+</header>
+<main>
+  <form id='recoverForm'  class='form'>
+    <div class='formOrder'>
+      <label>Correo electrónico</label>
+      <input type='email' id="email" placeholder="email" ></input>
+    </div>
+    <button type='submit' class='submit'>Enviar</button>
+  </form>
+  <div class='switch'>
+    <p>Inicia sesion <a href='http://localhost:8080/login/'>aquí</a></p>
+  </div>
+</main>
+<script src='//cdn.jsdelivr.net/npm/sweetalert2@11'></script>
+<script src='/js/forgot-password.js'></script>
+
+
+{{!-- <div>
     <form id="formulario">
         <h1>Actualiza tu contraseña</h1>
         <input id="email" type="email" placeholder="Ingresa tu email">
@@ -7,4 +29,4 @@
     </form>
 </div>
 
-<script src="/js/forgot-password.js"></script>
+<script src="/js/forgot-password.js"></script> --}}
