--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,6 +3,7 @@
         <li><a href="/products">Tienda</a></li>
         <li><a href="/profile">Perfil</a></li>
         <li><a id="btnLogout" href="/logout">Logout</a></li>
+        {{!-- <li><a id="btnLogout">Logout</a></li> --}}
     </div>
 </header>
 <section>
